# UNIT

./: README.md
backend/: .gitignore  agent.ts  ccxtTools.ts  coingeckoTools.ts  defiYieldTools.ts  defiborrowTools.ts  generate-cipher.ts  generateEntitySecret.ts  hiveTools.ts  index.ts  lifiTools.ts  package-lock.json  package.json  philidorTools.ts  registerSecret.ts  server.test.ts  server.ts  tsconfig.json  txBuilder.test.ts  txBuilder.ts
defi-yield-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
defi-yield-mcp/src/defi_yield_mcp/: __init__.py  __main__.py  server.py
frontend/: .gitignore  components.json  next.config.ts  open-next.config.ts  package-lock.json  package.json  setup-reputation.mjs  tsconfig.tsbuildinfo  wrangler.jsonc
frontend/.open-next/.build/: open-next.config.mjs
frontend/.open-next/assets/: BUILD_ID
frontend/.open-next/cloudflare/: cache-assets-manifest.sql  init.js  next-env.mjs
frontend/.open-next/dynamodb-provider/: dynamodb-cache.json
frontend/.open-next/middleware/: handler.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/components/ai/: chat-message.tsx  execution-graph.tsx  prompt-box.tsx  streaming-reasoning.tsx  thinking-terminal.tsx
frontend/hooks/: use-chat.ts  use-circle-social-wallet.ts  use-circle-wallet.ts  use-execution.ts  use-theme.tsx
frontend/lib/: api.ts  circle.ts  config.ts  store.ts  types.ts  utils.ts
frontend/public/: agent-metadata.json
frontend/scripts/: setup-erc8004.sh
(+76 files in other folders)
