[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defi-yield-mcp"
version = "0.1.0"
description = "MCP server for cross-protocol DeFi yield opportunities with risk metrics via DefiLlama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "RJW34"}]
keywords = ["mcp", "defi", "yield", "farming", "defillama", "apy", "tvl", "impermanent-loss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Repository = "https://github.com/RJW34/defi-yield-mcp"

[project.scripts]
defi-yield-mcp = "defi_yield_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/defi_yield_mcp"]
